<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include layout="@layout/activity_tool_bar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            >
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:id="@+id/txtCardTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />
                        <TextView
                            android:id="@+id/txtCardSubtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/secondary_text"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                        <TextView
                            android:id="@+id/txtCardDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/supporting_text"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />

                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnSignIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_2"
                            style="@style/Widget.AppCompat.Button.Colored"
                            />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/action_1"
                            style="@style/Widget.AppCompat.Button.Colored"
                            />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnStart"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_3"
                            style="@style/Widget.AppCompat.Button.Colored"
                            />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCloseSesion"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_3"
                            style="@style/Widget.AppCompat.Button.Colored"
                            />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>